--- a/Map/app/src/main/res/values/strings.xml
+++ b/Map/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MapQuest</string>
     <string name="title_activity_hud">Map</string>
     <string name="MapKey">AIzaSyBAUMk9HVPbjHUMdUFm76z2BazvrPBUA5g</string>
+    <string name="MapAdd">Add</string>
 </resources>
