Set up map activity to send data to a server
Got list of makers into json format, some preliminary stuff to send to
server

--- a/New Project/MyApplication2/app/src/main/res/values/strings.xml
+++ b/New Project/MyApplication2/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
 
     <string name="title_activity_hud">Map</string>
     <string name="MapAdd">Add</string>
+    <string name="MapSave">Save</string>
 
 </resources>
